adding bonus question 6

--- a/w02d01/src/notebooks/drinks_tutorial.ipynb
+++ b/w02d01/src/notebooks/drinks_tutorial.ipynb
@@ -373,6 +373,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Problem 6\n",
+    "Your restraunt chain is loosing business, how can we find out "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
