adding bonus question 6

--- a/w02d01/src/notebooks/drinks_tutorial.ipynb
+++ b/w02d01/src/notebooks/drinks_tutorial.ipynb
@@ -373,13 +373,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## Problem 6\n",
-    "Your restraunt chain is loosing business, how can we find out "
+    "## Bonus: Problem 6\n",
+    "Your restraunt chain is loosing business, how can we find out what the last bar a person visited, can we attribute this bar to being a root cause to why our customers are leaving ?"
    ]
   },
   {
